<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.markgubatan.loltracker.ui.fragments.OrganizationFragment">

    <ListView android:id="@+id/org_list" android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center" />

</FrameLayout>
